Added Editor -> Code Style -> Cypher